# xtbwheel

./: MANIFEST.in  README.md  ffibuilder.py  meson.build  pyproject.toml  pytest.sh
.github/workflows/: cibuildwheel.yml  sdist.yml  wheels-linux.yml  wheels-mac.yml  wheels-win.yml  wheels.yml
include/: xtb.h
subprojects/: .gitignore  xtb-latest.wrap
tests/: test_ase_calculator.py  test_ase_optimize.py  test_interface.py  test_libxtb.py  test_qcschema.py  test_utils.py
xtb/: qcschema.py
xtbwheel/: ase.py  interface.py  libxtb.py  qcschema.py  utils.py
